--- a/briar-android/src/main/res/layout/fragment_contact_link_exchange.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_exchange.xml
@@ -18,57 +18,11 @@
 		android:hint="@string/contact_name_hint"
 		android:importantForAutofill="no"
 		android:inputType="text|textCapWords"
-		app:layout_constraintBottom_toTopOf="@id/linkInput"
+		app:layout_constraintBottom_toTopOf="@id/linkIntro"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintVertical_chainStyle="packed"/>
-
-	<EditText
-		android:id="@+id/linkInput"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/margin_xlarge"
-		android:drawableLeft="@drawable/ic_link"
-		android:drawablePadding="8dp"
-		android:drawableStart="@drawable/ic_link"
-		android:drawableTint="?attr/colorControlNormal"
-		android:hint="@string/contact_link_hint"
-		android:importantForAutofill="no"
-		android:inputType="textUri"
-		app:layout_constraintBottom_toTopOf="@id/pasteButton"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/contactNameInput"/>
-
-	<Button
-		android:id="@+id/pasteButton"
-		style="@style/BriarButtonFlat.Positive.Tiny"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:drawableLeft="@drawable/ic_content_paste"
-		android:drawablePadding="8dp"
-		android:drawableStart="@drawable/ic_content_paste"
-		android:text="@string/paste_button"
-		app:layout_constraintBottom_toTopOf="@id/linkIntro"
-		app:layout_constraintEnd_toStartOf="@id/scanCodeButton"
-		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/linkInput"/>
-
-	<Button
-		android:id="@+id/scanCodeButton"
-		style="@style/BriarButtonFlat.Positive.Tiny"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:drawableLeft="@drawable/ic_qr_code"
-		android:drawablePadding="8dp"
-		android:text="@string/scan_qr_code_button"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintStart_toEndOf="@id/pasteButton"
-		app:layout_constraintTop_toBottomOf="@id/linkInput"
-		android:drawableStart="@drawable/ic_qr_code"/>
 
 	<TextView
 		android:id="@+id/linkIntro"
@@ -82,7 +36,7 @@
 		app:layout_constraintBottom_toTopOf="@id/linkView"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/pasteButton"/>
+		app:layout_constraintTop_toBottomOf="@id/contactNameInput"/>
 
 	<TextView
 		android:id="@+id/linkView"
@@ -110,7 +64,7 @@
 		android:drawablePadding="8dp"
 		android:drawableStart="@drawable/ic_content_copy"
 		android:text="@string/copy_button"
-		app:layout_constraintBottom_toTopOf="@id/addButton"
+		app:layout_constraintBottom_toTopOf="@id/linkInput"
 		app:layout_constraintEnd_toStartOf="@id/shareButton"
 		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toStartOf="parent"
@@ -147,6 +101,53 @@
 		app:layout_constraintStart_toEndOf="@id/shareButton"
 		app:layout_constraintTop_toTopOf="@id/copyButton"/>
 
+
+	<EditText
+		android:id="@+id/linkInput"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_xlarge"
+		android:drawableLeft="@drawable/ic_link"
+		android:drawablePadding="8dp"
+		android:drawableStart="@drawable/ic_link"
+		android:drawableTint="?attr/colorControlNormal"
+		android:hint="@string/contact_link_hint"
+		android:importantForAutofill="no"
+		android:inputType="textUri"
+		app:layout_constraintBottom_toTopOf="@id/pasteButton"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/copyButton"/>
+
+	<Button
+		android:id="@+id/pasteButton"
+		style="@style/BriarButtonFlat.Positive.Tiny"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:drawableLeft="@drawable/ic_content_paste"
+		android:drawablePadding="8dp"
+		android:drawableStart="@drawable/ic_content_paste"
+		android:text="@string/paste_button"
+		app:layout_constraintBottom_toTopOf="@id/addButton"
+		app:layout_constraintEnd_toStartOf="@id/scanCodeButton"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/linkInput"/>
+
+	<Button
+		android:id="@+id/scanCodeButton"
+		style="@style/BriarButtonFlat.Positive.Tiny"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:drawableLeft="@drawable/ic_qr_code"
+		android:drawablePadding="8dp"
+		android:text="@string/scan_qr_code_button"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toEndOf="@id/pasteButton"
+		app:layout_constraintTop_toBottomOf="@id/linkInput"
+		android:drawableStart="@drawable/ic_qr_code"/>
+
 	<Button
 		android:id="@+id/addButton"
 		style="@style/BriarButton"
@@ -156,9 +157,8 @@
 		android:enabled="false"
 		android:text="@string/add_contact_button"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.75"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/copyButton"
+		app:layout_constraintTop_toBottomOf="@id/pasteButton"
 		tools:enabled="true"/>
 
 </android.support.constraint.ConstraintLayout>
