Show QR code again

--- a/briar-android/src/main/res/layout/fragment_contact_link_exchange.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_exchange.xml
@@ -86,7 +86,7 @@
 			android:drawablePadding="8dp"
 			android:drawableStart="@drawable/ic_qr_code"
 			android:text="@string/scan_qr_code_button"
-			android:visibility="gone"
+			android:visibility="visible"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toEndOf="@id/pasteButton"
@@ -163,7 +163,7 @@
 			android:drawableStart="@drawable/ic_qr_code"
 			android:drawableTint="@color/briar_button_text_positive"
 			android:text="@string/show_qr_code_button"
-			android:visibility="gone"
+			android:visibility="visible"
 			app:layout_constraintBottom_toBottomOf="@id/copyButton"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toEndOf="@id/shareButton"
